# Lattice

./: .gitignore  AUTH_DEBUGGING_GUIDE.md  AUTH_ERROR_FIX.md  AUTH_FIX_COMPLETE.md  AUTH_FIX_SUMMARY.md  BACKEND_PLAN.md  CORS_500_ERROR_FIX_SUMMARY.md  FINAL_AUTH_SOLUTION.md  FRONTEND_BACKEND_INTEGRATION.md  FRONTEND_KNOT_INTEGRATION.md  KNOT_API_RESPONSE_FIX.md  KNOT_DEVELOPMENT_MODE_FIXED.md  KNOT_FRONTEND_COMPLETE.md  KNOT_FRONTEND_INTEGRATION_PLAN.md  KNOT_FRONTEND_TEST.md  KNOT_QUICK_START.md  KNOT_REAL_SDK_FIXED.md  KNOT_SDK_FIX.md  KNOT_SDK_INTEGRATION_COMPLETE.md  QUICK_AUTH_FIX.md  QUICK_START.sh  README.md  SETUP.md  TEST_INTEGRATION.md  TEST_KNOT_NOW.sh  TROUBLESHOOTING.md  kill-port.sh  restart-backend.sh  setup.sh  start_backend.sh  test_auth_flow.sh
app/: page.tsx
backend/: .gitignore  AUTH_SETUP.md  BACKEND_STEP_PLAN.md  DATABASE_SETUP.md  KNOT_INTEGRATION_COMPLETE.md  Makefile  README.md  SETUP_COMPLETE.md  STEP_2_COMPLETE.md  STEP_3_COMPLETE.md  STEP_4_COMPLETE.md  STEP_5_COMPLETE.md  alembic.ini  pyproject.toml  requirements.txt  run.py  test_api.py  test_auth.py  test_knot_integration.py  test_write_api.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: accounts.py  auth.py  chats.py  groups.py  insights.py  mock_data.py  onboarding.py  schemas.py  settings.py  transactions.py
backend/app/config/: settings.py
backend/app/data/: users_store.json
backend/app/integrations/: __init__.py  knot.py  knot_types.py
backend/app/middleware/: __init__.py  auth.py
backend/scripts/: init_db.py  seed_data.py
(+57 files in other folders)
